--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,21 @@
 Source: gppcscconnectionplugin
 Section: libs
 Priority: extra
-Maintainer: Dmitry Eremin-Solenikov <dbaryshkov@gmail.com>
-Build-Depends: debhelper (>= 8.0.0), autotools-dev, libglobalplatform-dev, libssl-dev, libpcsclite-dev
-Standards-Version: 3.9.2
+Maintainer: Simon Josefsson <simon@josefsson.org>
+Build-Depends: debhelper (>= 9), dh-autoreconf, autotools-dev, pkg-config, libglobalplatform-dev, libssl-dev, libpcsclite-dev
+Standards-Version: 3.9.4
 Homepage: http://globalplatform.sourceforge.net/
+Vcs-Git: git://github.com/Yubico/gppcscconnectionplugin-dpkg.git
+Vcs-Browser: https://github.com/Yubico/gppcscconnectionplugin-dpkg
 
 Package: libgppcscconnectionplugin1
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+Pre-Depends: ${misc:Pre-Depends}
+Multi-Arch: same
 Provides: globalplatform-connection-plugin
 Description: PC/SC connection plugin for GlobalPlatform Library
- This package provides a GlobalPlatform library a possibility
+ This package provides a GlobalPlatform library/application a possibility
  to use PC/SC middleware/daemon to access smart cards.
+ .
+ The libgppcscconnectionplugin is used by gpshell for example.
