--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: gppcscconnectionplugin
 Section: libs
 Priority: extra
 Maintainer: Simon Josefsson <simon@josefsson.org>
-Build-Depends: debhelper (>= 9), dh-autoreconf, autotools-dev, pkg-config, libglobalplatform-dev, libssl-dev, libpcsclite-dev
+Build-Depends: debhelper (>= 9), dh-autoreconf, autotools-dev, pkg-config, libglobalplatform-dev, libpcsclite-dev
 Standards-Version: 3.9.4
 Homepage: http://globalplatform.sourceforge.net/
 Vcs-Git: git://github.com/Yubico/gppcscconnectionplugin-dpkg.git
